# file-transcription-app

./: .gitignore  README.md  pyproject.toml
src/video_transcribe/: __init__.py  audio.py  cli.py  formats.py  transcribe.py
